ai-literacy-delegation-boundary/v07/SPEC.md
## SPEC — v0.7 점수 framework

**최종 업데이트**: 2026-05-04 세션287 (v0.7 분기 — §0~§6 결정 묶음 반영: 합산 모델 + 공식형 박스 + 카드 매칭 활성화 + 두 풀 통합 + 타이틀 정정 + csv 재구성)
**PLAN**: [[PLAN|PLAN.md]] / **TASKS**: [[TASKS|TASKS.md]]

> 에이전트 전달용 기술 상세. 코드와 동기화. 변경 시 build.py / extract_balance.js / index.html 영향 점검.

---

#### 0. v0.7 변경 요약 (v0.6 → v0.7)

5/3 밤 동현공 플테에서 결정적 발견이 도착했다. UI 라벨이 학습 메시지를 정반대로 도착시키는 자리 — 화면의 "위임판단력 -2 / 도메인지식 -8" 박스는 선택지 영향이 아니라 보유 점수가 자원 비용에 적용한 할인 효과였다. 메카닉은 정확히 작동, 화면이 거짓말한다. 5/4 한 호흡으로 §0~§6 결정 묶음이 들어와 v0.6 → v0.7로 분기.

##### 0.1 결정 묶음 한 페이지 요약

| 영역 | v0.6 | v0.7 |
|---|---|---|
| 거버넌스 | csv·yaml·gameState 어긋남 잔존 | **3층 분리 룰 확정** — csv = 정적 init 검수 / yaml = 단일 진실 / gameState = 런타임. 비활성 메카닉 데이터는 csv·yaml에서 제거 |
| 점수 산출 | lookup 모델 (finals.score 27 자리) | **합산 모델** — `tier1.points + tier2.points + review.points + bonus = 30 + 30 + 30 + 10 = 100점` |
| 자원 충전 | Lv별 메터 max 증가 | **메터 max 100/100 고정**, RP +20 유지, 양쪽 만땅 자동 진행, 분배 화면 강조(A 채택) |
| UI 효과 박스 | 단일 "위임판단력 -2" 라벨 (오해) | **공식형 박스** — `시간 비용 [10] − 위임 할인 [2] = 최종 시간 [8]` / `에너지 비용 [8] − 지식 할인 [3] = 최종 에너지 [5]`, 두 줄 라벨 분리 |
| 카드 시스템 | 시나리오 아이템 + 19종 역량 카드 + boostCard 셋 공존 (둘 비활성) | **두 풀 통합** (옵션 가, 메타 동봉) + **카드 매칭 활성화 메카닉** (소유 카드 ↔ 받을 카드 매칭 시 점수 보너스) |
| 타이틀 화면 | 캐논 도입 + 진행자 톤 결 충돌 | **직접 명제 정정** — "위임의 경계 — AI 시대, 무엇을 맡기고 무엇을 직접 할 것인가" + 한 줄 도입 + 버튼 |
| csv | results.basePoint·finals.score 컬럼 잔존 | **단계별 점수 컬럼 신설** + axisDelta = 카드 매칭 룰 데이터로 재정의 + 19종 카드 별도 시트(`competency_cards.csv`) 분리 |

##### 0.2 학생 톤 메타 룰 격상

§1을 넘어 v0.7 SPEC 전 §의 위에 두는 메타 룰. 모든 학생 화면 텍스트(튜토리얼·박스·모달·결과 패널·분배 화면·시상·종합 리포트)는 다음 룰을 따른다.

1. 시스템 ID 노출 금지. `selfintro`, `A1R3`, `tier1`, `R2` 같은 코드 라벨은 학생에게 보이지 않는다.
2. 선택 행동·맥락·의미 중심 서술형. 무엇을 골랐고 그 자리가 어떤 의미였는지 한 호흡으로 풀어 쓴다.
3. 초중등생 톤. 한 번 읽고 이해할 수 있는 길이와 어휘. 추상 개념어·전문 용어 X.

##### 0.3 미해결 / 다음 결정

- 카드 매칭/연관 룰 — v0.7 1차는 직접 매칭만, 연관 매칭(역량 그룹 yaml)은 v0.7.x
- review.varPoint leaf별 변수 — 합산 모델 단순 분배(R1=10·R2=20·R3=30)로 v0.7 진입, 플테 후 결정
- 캐논 도입("딸깍하면…") 별도 자리 — README가 자연스럽지만 학생이 게임 안에서 못 봄. ending 자리 추가 결정
- 위 축(위임 판단력) 측정·객관 기준 표현 — 1차 v0.7 플테 후 결정

---

#### 0a. 핵심 변경 요약 (v0.5 → v0.6) — 보존 기록

| 영역 | v0.5 | v0.6 |
|---|---|---|
| 점수 기여 | tier2 delegation에만 부분적 | tier1 / tier2 / review **모든 단계** |
| 점수 축 | 단일 (basePoint) | **두 축 분리 (위 / 도)** |
| 비용 보정 | `resourceCostMultiplier: 0.6` 글로벌 | **폐지** — raw 재조정 |
| 카드 키 | `cardSlots.boostCard` | **`axisDelta`** |
| 학생 노출 | 매 단계 점수 미터 | **시나리오 끝 종합만** |
| 학기 끝 | basePoint 누적 → result 라벨 | **누적 위/도 → 4유형 라벨 (pp/pn/np/nn)** |

---

#### 1. yaml 스키마 — delta 필드

##### 1.1 tier1 (큰 방향 선택)

```yaml
tier1:
  - id: A
    label: AI에게 먼저 물어본다
    delta: { 위: +1, 도: 0 }
  - id: B
    label: 친구한테 묻는다
    delta: { 위: 0, 도: +1 }
```

##### 1.2 tier2 (행동 선택, tier1 분기 아래)

```yaml
tier2:
  A:
    - id: A1
      label: 직접 검색해본다
      delta: { 위: +2, 도: +1 }
      cost: { time: 30, energy: 10 }   # raw, 0.6 곱하기 없음
    - id: A2
      label: AI 답을 그대로 믿는다
      delta: { 위: -2, 도: 0 }
      cost: { time: 5, energy: 2 }
```

##### 1.3 reviews (검토 강도)

```yaml
reviews:
  - id: R1
    label: 그냥 제출
    delta: { 위: -1, 도: 0 }
    cost: { time: 0, energy: 0 }
  - id: R3
    label: 출처 비교 + 다시 정리
    delta: { 위: 0, 도: +3 }
    cost: { time: 40, energy: 15 }
```

##### 1.4 axisDelta — 카드 매칭 룰 데이터 (v0.7 재정의)

v0.6까지 axisDelta는 "시나리오별 카드 슬롯"(boostCard·bonusPoint)이었다. v0.7에서 이 자리를 폐기하고 **카드 매칭 룰 데이터**로 재정의한다. 어떤 19종 역량 카드를 보유한 상태에서 어떤 leaf에 진입할 때 +N 보너스가 붙는지 lookup 자리로 사용한다. §7.8 카드 매칭 활성화 메카닉의 데이터 백본.

```yaml
axisDelta:                          # v0.7 재정의 — 카드 매칭 룰
  - leafId: A1R3                    # 진입 leaf
    requireCard: 자기지식           # 보유해야 활성화되는 카드 라벨 (직접 매칭)
    bonusPoint: 5                   # 매칭 시 점수 보너스 (bonus 항으로 흡수)
  - leafId: B2R2
    requireCard: 비판적 사고
    bonusPoint: 5
  # 연관 매칭(역량 그룹) 룰은 v0.7.x 자리 — 그룹 yaml 정의 후 도입
```

**룰 두 결**:
- **직접 매칭** (v0.7 1차): `requireCard`와 학생 보유 카드 라벨이 정확히 일치
- **연관 매칭** (v0.7.x): 역량 그룹 yaml 정의 후. "자기지식" 보유 → "자기검증" 받는 leaf 활성화 같은 느슨한 매칭

폐기된 자리: `axisDelta.boostCard`, `axisDelta.bonusPoint`(시나리오 카드 슬롯), `triggerLeafIds`(역방향 lookup). 현재 leaf 기준 forward lookup으로 단순화.

---

#### 2. 점수 누적 로직 — 합산 모델 (v0.7)

##### 2.1 합산 식 (v0.7 채택)

v0.6의 lookup 모델(`finals[leaf+review].score`로 27 자리 사후 lookup)을 폐기하고, 단계별 점수가 산식 그대로 쌓이는 합산 모델로 전환. 학생 화면에 산식이 그대로 도착하고 csv 검수 인터페이스가 직관 매치된다.

```
score = tier1.points + tier2.points + review.points + bonus
      = (베이스 20 + 변수 10) + (베이스 20 + 변수 10) + (R1=10/R2=20/R3=30) + (카드매칭 + 자원잔여)
      = 30 + 30 + 30 + 10  =  최대 100점
```

각 항의 자리 의미:
- **tier1.points = basePoint + varPoint** — 큰 방향(A·B·C)의 베이스 점수 + 옵션마다 박힌 변수 (시나리오당 3 자리 = 5 시나리오 15 자리)
- **tier2.points = basePoint + varPoint** — 행동 옵션의 베이스 + 변수 (시나리오당 9 자리 = 45 자리)
- **review.points** — 검토 깊이 단순 분배 (R1=10, R2=20, R3=30, 시나리오당 3 자리)
- **bonus** — 카드 매칭 보너스 + 자원 잔여 보너스 합쳐서 최대 10. 카드 매칭은 §7.8 메카닉, 자원 잔여는 v0.7.x 자리

폐기된 자리: `results[t2].basePoint`, `finals[leaf+review].score`(검수 참고용은 일정 기간 보존하되 코드 미사용), `useReviewLevelBoost`, `detected`, `levelStep`, `levelExtraBonus`, `getCardBonus`, `cardSlots`, `cardsHeld`. `getCardBonus`는 `getCardMatchBonus`로 재정의되어 bonus 항 안의 한 자리.

##### 2.2 yaml 스키마 — 단계별 점수

```yaml
tier1:
  - id: A
    label: AI에게 먼저 물어본다
    basePoint: 20            # v0.7 신설
    varPoint: 5              # v0.7 신설 (옵션마다 다른 변수)

tier2:
  A:
    - id: A1
      label: 직접 검색해본다
      basePoint: 20          # v0.7 신설
      varPoint: 8            # v0.7 신설
      cost: { time: 30, energy: 10 }

review:
  - id: R1
    label: 그냥 제출
    points: 10               # v0.7 신설 (단순 분배)
  - id: R2
    label: 한 번 훑어보기
    points: 20
  - id: R3
    label: 출처 비교 + 다시 정리
    points: 30

# bonus는 런타임 계산 — yaml init에 박지 않음
# (cardMatchBonus + resourceLeftover) ≤ 10
```

검수 참고용 보존(코드 미사용):
- `results[t2].basePoint` — 일정 기간 보존, v0.7.x 정리
- `finals[leaf+review].score` — 일정 기간 보존, v0.7.x 정리

##### 2.3 학생 화면 점수 도착 — Cut6 결과 패널

합산 모델은 단계별 점수가 어떻게 100점에 도달했는지 학생 화면에 그대로 도착시킨다.

```
1차 선택 — 직접 쓰기를 골라 자기 자리 잡았다             +20점
더 자세히 — 추억과 관심사를 정리해 풍부하게 풀어냈다     +25점
검토 — 처음부터 다시 읽고 한 줄을 더 넣었다              +30점
종합 — 자기지식 카드 매칭 보너스                         +5점
─────────────────────────────────
총 80점, A 등급
```

각 줄의 narrative는 yaml의 `reviewSupplements[leaf+review]` 135 자리 학생 톤 텍스트에서 가져온다(§7 참조). 점수 자체는 합산 항 그대로 노출.

##### 2.4 4유형 판정 (학기 끝)

| score_위 | score_도 | 라벨 |
|---|---|---|
| ≥ +N | ≥ +N | **pp** — 판단도 도메인도 단단 |
| ≥ +N | < +N | **pn** — 판단 단단, 도메인 가벼움 |
| < +N | ≥ +N | **np** — 도메인 단단, 판단 가벼움 |
| < +N | < +N | **nn** — 둘 다 가벼움 |

> 임계값 N은 v0.7 플테 후 발란스에서 확정. 가안: N = 0 (양/음 부호로만 판정).

##### 2.5 학생 노출 정책 [폐기 — 5/3, v0.7도 동일]

점수 UI는 항상 보이는 상태가 기본. 숨김이 필요하다면 UI 토글이 아니라 점수 업데이트 시점을 지연(delay)하는 방식.

- **점수 UI**: 항상 노출 (LV / SCORE / 위 / 도 / 진행 카운터)
- **시나리오 끝**: 위·도 두 축 점수 + 그 시나리오 누적 한 줄 + 단계별 점수 narrative (§2.3)
- **학기 끝**: 4유형 라벨 + 그동안 누적된 19종 카드 모음

---

#### 3. 비용 계산식 (multiplier 폐지)

##### 3.1 v0.5 (폐지)

```
actual_cost = raw_cost × resourceCostMultiplier (0.6)
```

##### 3.2 v0.6

```
actual_cost = raw_cost
```

raw 비용은 학기 시작 자원(`resourceMaxStart`) 대비 leaf 기여를 명시적으로 짜서 재조정.

##### 3.3 시나리오 단위 누적 + 비대칭 효과 (5/3 세션278 root cause 정정)

**5/3 폭주 진단**: DELTA_POS={'++':4,'+':2} + competencyDiscountMult=2 → 실효 ×4. **그러나 root cause는 mult 값이 아니라 회로 — 한 시나리오 안에서 점수가 즉시 누적되어 다음 선택의 비용 효과가 즉시 변화**. 발란스 mult 조정으로는 폭주 강도만 줄어들 뿐 회로는 유지.

**root cause 정정 — 누적 단위를 시나리오로 끌어올림**:

- 한 시나리오 안에서는 비용 효과가 **고정** (학기 시작 ~ 이전 시나리오 끝까지 누적된 점수 기준)
- 학생의 선택은 **pending 점수**로 시각적으로만 표시 (§12 원 마커)
- 시나리오 끝에서 pending → 누적 게이지로 흡수
- 다음 시나리오부터 새 누적값으로 비용 효과 변화

**효과 식**:

```
displayed_cost = raw_cost - effect
effect = 누적_점수 × mult (시나리오 안 변화 X, pending 배제)
mult: 양수 ×2, 음수 ×2 (대칭 — 시나리오 단위라 폭주 위험 없음)
```

| 단계 | 정정 전 (5/3 박힘) | 시나리오 단위 + ±1 단순화 (5/3 최종) |
|---|---|---|
| 점수 매핑 | `{'++':4,'+':2}`/`{'-':-1,'--':-1}` | **선택당 ±1만** (`++/+ → 1`, `--/- → -1`) — 학생이 원 1·2·3개로 직관 |
| 효과 mult (양수) | 2 | 2 |
| 효과 mult (음수) | 2 | **2** (대칭 — 시나리오 단위라 안전) |
| 누적 변화 시점 | 매 선택 | **시나리오 끝** |
| 한 시나리오 안 비용 효과 | 변화 (폭주 회로) | **고정** |
| 한 회기 max pending (양수) | — | **+3** (모두 +) |
| 한 회기 max pending (음수) | — | **-3** (모두 -) |
| DELTA_POS / DELTA_NEG 변수 | 사용 | **폐기** (`getAxisDelta(sign)` 함수로 단순화) |

CONFIG: `competencyDiscountMultPos: 2`, `competencyDiscountMultNeg: 2` (대칭).

코드:
- `_applyDiscount`는 `gameState.competencies.*.value` (이전 시나리오까지 누적) 기준 — pending 배제
- pending은 `gameState.pending.{delegation, knowledge}`에 박힘
- 시나리오 끝에 `absorbPending()` 호출 → value에 더하고 pending 0으로 reset

##### 3.4 공식형 박스 — 선택 화면 비용 표시 (v0.7 신설)

5/3 동현공 플테에서 도착한 결정적 발견을 화면 자리에 정정. ④ 할인 효과 메카닉이 학생 화면에 산식 그대로 도착하도록 두 줄 라벨 분리 박스로 표시. Cut2/Cut3 선택 화면에서 각 선택지 박스 아래에 다음 형식이 들어간다.

```
시간 비용 [10] − 위임 할인 [2] = 최종 시간 [8]
에너지 비용 [8] − 지식 할인 [3] = 최종 에너지 [5]
```

**박스 룰**:
- 두 줄 라벨 분리 — 시간 줄에는 위임판단력이, 에너지 줄에는 도메인지식이 할인 자리로 들어간다. 두 역량의 독립 학습 메시지가 살아남
- **최종 시간 / 최종 에너지 볼드** — 학생이 가장 먼저 읽어야 할 자리
- 학생 톤 — "시간 비용", "위임 할인", "최종 시간"처럼 한 번 읽고 이해 가능한 어휘
- 선택 화면 박스 정보 룰 (§7.8 박스 룰): 직관·구체만, 예상 점수 X
- **카드 매칭은 박스 자리 X** — 카드 매칭은 비용이 아니라 점수에 작용하므로 결과 패널(Cut6) 단계별 점수 자리에서 한 줄로 표시 ("자기지식 카드 매칭 보너스 +5")

**학생 화면 도착 검증**: 화면이 보내는 메시지 = 메카닉이 보내려는 메시지. "보유 위임판단력이 이 선택의 시간 비용을 -2 할인해줬다"가 박스 안 산식 그대로 학생 화면에 도착한다. v0.6에서 학생이 "선택지가 위·도를 깎는다"로 오해했던 자리 정정.

코드 자리: §6.6 참조 (`buildEffectCell`·`buildCostHTML` 공식형 박스 재작성).

##### 3.5 raw 비용 분배 룰 (v0.7 신설)

5/4 피터공 통찰: v0.6 raw 비용이 학생 직관과 어긋나는 자리가 있다. 모둠 발표에서 "AI 위임"(B)이 "다른 자료 기대기"(C)보다 시간 비용이 높게 박혀 있어, AI 사용의 일반 혜택(시간/에너지 절약)이 화면에 도착하지 않는다. 또 시간 비용이 에너지 비용보다 전반적으로 너무 높아 두 자원의 균형이 안 잡힌다.

**큰 룰 — 선택지 간 비용 위계**

| tier1 | 시간 비용 | 에너지 비용 | 근거 |
|---|---|---|---|
| **A 직접** | 가장 큼 | 가장 큼 | 자료 찾기 + 통합 + 작성 모두 본인 |
| **B AI 위임** | 가장 작음 | 가장 작음 (B1) ~ 큼 (B3) | AI 일반 혜택 = 절약. 검토·편집 강도에 따라 에너지 가변 |
| **C 기존 자료 기대기** | 중간 (A보다 작음) | 중간 | 찾고 통합하는 시간/에너지 듦. AI보다는 큼 |

**위계 규칙**: 같은 review 단계(R1)에서 `B시간 < C시간 < A시간`. AI(B)가 항상 가장 절약. 기존 자료(C)는 시간 절약은 되지만 에너지 절약은 약함.

**leaf 단위 시간 vs 에너지 분배 패턴**

leaf마다 디자인 의도에 따라 시간/에너지 비율이 다르다.

| 패턴 | 예시 leaf | 시간 | 에너지 | 근거 |
|---|---|---|---|---|
| 직접 + 깊은 작업 | A1, A2 | 매우 큼 | 큼 | 시간이 에너지보다 약간 큼 |
| 직접 + 가벼움 | A3 | 큼 | 중간 | 시간이 에너지보다 큼 |
| AI 풀위임 | B1 | 매우 작음 | 매우 작음 | 둘 다 절약 |
| AI + 일부 검토 | B2 | 작음 | 중간 | 시간 절약, 검토 에너지 듦 |
| AI + 본인 편집/통합 | B3 | 작음 | 큼 | "AI 쓰지만 글 대부분 편집" — 시간 ↓ 에너지 ↑↑ |
| 기존 자료 + 깊은 통합 | C1 | 중간 | 큼 | 통합 에너지 큼 |
| 기존 자료 + 보통 | C2 | 중간 | 중간 | 균형 |
| 기존 자료 풀의존 | C3 | 작음 | 작음 | 거의 그대로 사용 |

**review 가산**: R1=베이스, R2=+5 시간/+4 에너지, R3=+15 시간/+11 에너지 (현재 패턴 보존, 검토 강도가 비용 추가).

**stage floor (5/4 세션289 박음)**: t2와 review 단계는 시간 2 / 에너지 1 minimum. yaml resourceCosts는 leaf 총비용이고, formula가 t1=min, t2=min(t2family)-t1, review=leaf-t1-t2로 분해하는 구조라 가장 싼 t2 (A3·B1·C3)와 R1 그대로 제출이 0으로 도착했다. floor 박힌 자리: `_rawTier2Cost`·`_rawReviewCost` (코드) + `raw_t2_cost`·`raw_review_cost` (build_csv.py). yaml 자체는 변경 X. 가장 싼 leaf 한정 stage 합이 leaf 총비용보다 최대 4t/2e 큼 (overage 의도).

**시간/에너지 균형 룰**: 시간만 일률적으로 더 크지 않게. leaf 패턴에 따라 시간 우위(직접·AI 풀위임)와 에너지 우위(AI+편집·기존 자료 통합)가 갈린다.

**적용 범위**: 5 시나리오 × 27 자리(leaf+review) × 시간/에너지 = 270 자리 일괄 sweep. 시나리오 narrative와 leaf 디자인 의도 정합 검증.

**검수 자리**: 비용 sweep 완료 후 csv 리젠 → 피터공이 leaf 단위 검수.

---

#### 4. build.py 영향

| 영역 | 수정 내용 |
|---|---|
| 출력 변수명 | `SCENARIO_*` → `SCENARIOS` (v0.5 단일 객체와 동일) |
| 키 변경 | `cardSlots.boostCard` → `axisDelta` |
| 새 필드 | tier1/tier2/reviews에 `delta`, `cost` 처리 |
| 산출 | `index.html.template`에 `__SCENARIOS__`, `__CUT_IMAGES__` 자리 (v0.5와 동일) |

---

#### 5. extract_balance.js 영향

| 영역 | 수정 내용 |
|---|---|
| 새 컬럼 | `delta_위`, `delta_도` (tier1/tier2/review 각 행에) |
| 제거 컬럼 | basePoint (사용 시) |
| 보존 | peter_note 보존 로직 그대로 |
| 출력 | `~/Downloads/v06_balance_{date}/choices.csv` |

---

#### 6. index.html (코드) 영향

##### 6.0 진행 상태 (5/3 세션275)

| 영역 | 상태 | 비고 |
|---|---|---|
| 6.1 점수 누적 (두 축) | **이미 작동** | `competencies.delegationChoice` (위) + `competencies.knowledge` (도). 이름만 v0.5 변수명, 동작은 두 축 분리 누적 동일 |
| 6.1 tier1 점수 기여 | **5/3 framework 추가** ✅ | `applyTier1`에 `getAxisDelta` 호출 자리 추가. yaml tier1에 `delegation`·`knowledge` 필드 없으면 fallback 0 |
| 6.2 multiplier 폐지 | **미진행** ❌ | `CONFIG.resourceCostMultiplier:0.6` 잔존. raw 재조정과 묶인 발란스 작업이라 외부 LLM 분석 결과 반영 사이클에서 같이 진행 |
| 6.3 시나리오 끝 화면 | **이미 작동** ✅ | `score-display` 항상 노출 (5/3 §2.3 진행 중 숨김 정책 폐기 — 점수 UI는 항상 보이는 상태가 기본) |
| 6.4 학기 끝 화면 | **이미 작동** ✅ | v0.5 Phase 8에서 `showFinalReport`(line 1998)·4유형 분류(line 1991)·4유형 의미 박스(line 2021) 구현됨. 4유형 라벨(pp/pn/np/nn) + 등급(S/A/B/C/D) + 무드 메시지 |
| 6.5 음수 delta 매핑 | **5/3 결정** ✅ | `DELTA_NEG={'-':-1,'--':-1}`로 음수 폭 압축. `getAxisDelta` 함수 분기로 양수·음수 다른 룰 적용 가능 구조 |

##### 6.1 점수 누적 (런타임)

현재 코드는 v0.5 변수명을 유지하되 두 축 분리 누적 작동:

```js
// 위: tier1 + tier2의 delegation 누적 (5/3부터 tier1 기여)
gameState.competencies.delegationChoice.value += getAxisDelta(sign);
// 도: tier1 + finals[leaf]의 knowledge 누적 (5/3부터 tier1 기여)
gameState.competencies.knowledge.value += getAxisDelta(sign);
```

이름 마이그(`competencies.delegationChoice` → `state.score.위`)는 사실상 변경이지 동작 변화 없음. 우선순위 낮음.

##### 6.2 cost meter (미진행)

SPEC: `actual_cost = leaf.cost` (multiplier 곱셈 제거). 현재 `_applyMult` 함수에서 0.6 곱셈 잔존. raw 재조정과 묶여 후속.

##### 6.3 시나리오 끝 chain (5/3 세션278 재배치)

cut6 결과 패널 표시 후 1.4초 → 모달 chain. 카드 단계가 첫 자리. 학기 끝일 땐 자원 충전 단계 건너뛰고 종합 리포트로.

```
[0] 결과 패널 (cut6 본체)            등급·획득 아이템·awareness·위/도 delta+누적·비용·exp·잔여 자원
        ↓ 1.4초 자동
[1] 카드 reward (조건부)             도 축 양수 + leaf의 competencyCards 비지 않음
        - 카드 1장씩 단건 컨펌
        - 라벨 + note + "획득" 버튼
        - 클릭 → 인벤토리로 travel → 다음 카드 자동 fadein
        - 마지막 카드 travel 끝나면 자동 닫힘
        ↓
[2] 레벨업 모달 (조건부)             didLevelUp일 때만. 자원 max 증가 + 자원토큰 보너스. "확인" 버튼
        ↓
[3] 자원 충전 모달 (조건부)          학기 끝 아닐 때만. RP 분배 (showRPDistributionModal)
        ↓
[4] 다음 버튼                        "다음 시나리오로 →" / "학기 종합 리포트 보기"
```

**카드 못 받은 회기 (도 축 음수 또는 카드 0장)**: 결과 패널에 "이번엔 역량 카드를 받지 못했어요" 한 줄 박스 노출 (학습 피드백 자리 명확화).

**chain 구현**: `Promise.resolve()` → 각 단계 함수가 Promise 반환. 카드 단계는 `playCardRewardSequential(cards, note)`로 모든 카드 컨펌 끝나면 resolve.

**호출 자리 이동 (5/3 세션278)**: `awardCompetencyCards`의 데이터 적립은 review 선택 시점 그대로 (cut5→cut6 전환 직전, line ~3893), 시각 reward(`playCardRewardSequential`)만 chain의 첫 단계로 분리.

##### 6.4 학기 끝 화면 (5/3 세션282 갱신 — 카드 누적 리뷰 + 카툰 정정)

v0.5 Phase 8에서 신설된 `showFinalReport` 자리에 카드 누적 리뷰 + 카툰 세부 정정 박힘. 학기 종합 리포트 화면 흐름:

1. **타이틀 + 부제**
2. **4박스 통계** (총점/레벨/위/도)
3. **4유형 의미 박스** (compType + compText)
4. **카드 누적 리뷰 섹션 (신설)** — 한 학기 동안 모은 역량 카드
   - 그룹별 카운트 (인벤토리 패널과 동일 룰: 23px·800·#f0f0f0 배경, 좌측 강조)
   - 라벨 (15px·700·카드 색상)
   - 출처 한 줄 (시나리오 unique join, #888)
   - 정렬: 카운트 내림차순 → 가나다순
   - 빈 상태: "이번 학기는 역량 카드를 받지 못했어요. 다시 도전!" 박스
5. **카툰** (시나리오마다 strip) — 세 정정:
   - 컷 간격 `.comic-strip` gap 10→5px
   - 시상 panel `.comic-panel-prize` 신설 — 폭 160→107px (2/3 축소)
   - mood 캡션(α) — `CONFIG.resultMoods` 정형 메시지 폐기, 학생 받은 카드 관점 텍스트로 갈음. 카드 받은 회기 "이번 회기에 **{카드명}** 카드를 얻었다…" / 못 받은 회기 "이번 회기는 카드를 받지 못했다…"
   - scene-summary(β) — scene-title 아래 한 줄 (12px·#555·중앙정렬): "선택: {tier2 라벨} · 위 ±N · 도 ±N · 카드 N장 — 라벨1, 라벨2"
6. **"학기 처음부터" 버튼**

**데이터 보강**: `gameState.scenarioHistory.push`에 4필드 추가 (`dlgDelta`/`knlDelta`/`dlgTotal`/`knlTotal`) — scene-summary β의 위/도 Δ 표시용. 시나리오 종료 시점 pending 값 스냅샷. 기존 세이브(필드 없음) 가드 — `typeof r.dlgDelta==='number'` 체크.

##### 6.5 음수 delta 매핑 (5/3)

```js
var DELTA_POS={'++':2,'+':1};
var DELTA_NEG={'-':-1,'--':-1};
function getAxisDelta(sign){...}  // 부호 분기 자리
```

##### 6.6 v0.7 코드 재작성 자리 (신설)

§0~§6 결정 묶음을 코드에 반영하는 자리. 단계 3(메인 직도)에서 진행. 이 절은 어디를 어떻게 손대야 하는지의 인덱스.

###### 6.6.1 `calculateFinalScore` — 합산 함수로 재작성

v0.6의 lookup 방식(`finals[leaf+review].score` 직접 가져옴) 폐기. 합산 모델로 재작성:

```js
function calculateFinalScore(leaf, review) {
  var t1 = getTier1(leaf);     // tier1.basePoint + tier1.varPoint
  var t2 = getTier2(leaf);     // tier2.basePoint + tier2.varPoint
  var rv = getReview(review);  // review.points (R1=10/R2=18/R3=30)
  var bn = getCardMatchBonus(leaf, gameState.inventory.competencyCards)
         + getResourceLeftoverBonus();  // bonus 항, 최대 10
  return t1.points + t2.points + rv.points + bn;
}
```

###### 6.6.2 `buildEffectCell` · `buildCostHTML` — 공식형 박스 두 줄 라벨

§3.4 공식형 박스 형식으로 재작성. Cut2/Cut3 선택 화면 박스 자리. 두 줄 라벨 분리:
```
시간 비용 [10] − 위임 할인 [2] = 최종 시간 [8]
에너지 비용 [8] − 지식 할인 [3] = 최종 에너지 [5]
```
최종 시간·최종 에너지 볼드. 학생 톤. 카드 매칭은 박스 X (점수 자리).

###### 6.6.3 Cut5 review 패널 — supplements 메인 텍스트

review 선택 화면(Cut5)의 layout 정정. `reviewSupplements[leaf+review]` 135 자리를 학생 화면 메인 텍스트로 격상. 검토 옵션의 라벨·lesson은 시나리오 단위 3 옵션 그대로 유지하되, leaf+review별 supplements가 학생이 읽는 자리.

###### 6.6.4 Cut6 결과 패널 — 단계별 점수 + narrative + 카드 매칭

§2.3 학생 화면 점수 도착 형식. 1차 선택 / 더 자세히 / 검토 / 종합(카드 매칭) 단계별 점수 + narrative 한 줄씩 + 합계 + 등급. yaml `reviewSupplements` narrative 그대로 사용. 카드 매칭 보너스는 "종합" 줄에 한 줄로("자기지식 카드 매칭 보너스 +5").

###### 6.6.5 폐기 자리

- `useReviewLevelBoost` — 검토 격상 메카닉, 카드 매칭으로 대체
- `detected` — 죽은 인자
- `levelStep`, `levelExtraBonus` — 합산 모델로 흡수
- `cardSlots`, `cardsHeld` — `axisDelta` 카드 매칭 룰로 재정의된 자리에 흡수
- `getCardBonus` — `getCardMatchBonus(leaf, ownedCards)`로 재정의 (§7.8 메카닉)
- `_applyMult` 0.6 곱셈 — multiplier 폐지 (v0.6 5/3 80ff4b5 작업, v0.7 확정)

###### 6.6.6 `getCardMatchBonus` — 카드 매칭 활성화 메카닉

```js
function getCardMatchBonus(leaf, ownedCards) {
  var rule = AXIS_DELTA.find(r => r.leafId === leaf);  // axisDelta 재정의 룰 lookup
  if (!rule) return 0;
  var matched = ownedCards.some(c => c.label === rule.requireCard);  // 직접 매칭
  return matched ? rule.bonusPoint : 0;
}
```

연관 매칭(역량 그룹 yaml)은 v0.7.x 자리. v0.7 1차는 직접 매칭만.

###### 6.6.7 점수 → 등급 재설계 (5/4 세션290)

5/3 세션287 1차 합산 모델은 basePoint 20×2 = 40이 모든 경로 바닥에 깔려서 회피·표절 자리도 50 이상이 도착했다. 등급 분포가 위로 압축. 대충 위임해도 B/A. 학습 의도 — "학습적 이상에만 고점, 대충 위임은 저점" — 이 안 박혔다.

**처방**: ① threshold 상향 ② basePoint 축소 ③ varPoint 변별 폭 키움(음수 허용) ④ R2 점수 미세 조정.

**새 threshold (CONFIG.pointThresholds)**:
| 등급 | 점수 |
|------|------|
| S | 95+ |
| A | 90~94 |
| B | 80~89 |
| C | 70~79 |
| D | 60~69 (60 미만도 D로 통일, 별도 F 등급 없음) |

**새 단계별 점수 분포 (yaml)**:
- **tier1**: basePoint **10** (전 자리 동일) + varPoint
  - 정점 ("자기 자리 직접" / "디자인 의도 정점") = **15**
  - 적절 ("양면 갈래") = **8**
  - 평이 ("위임 큰 방향") = **0**
- **tier2**: basePoint **10** (전 자리 동일) + varPoint
  - 정점 ("정점 자리") = **25**
  - 적절 ("적절 자리") = **12**
  - 중립 ("중립 자리") = **5**
  - 얕음 ("얕음 자리") = **0**
  - 회피 ("회피 자리") = **−10**
  - 부정 ("부정 자리" / 표절·환각) = **−10**
- **review**: R1=**10** / R2=**18** / R3=**30**
- **bonus**: max 10 (cardMatchBonusCap), resourceLeftoverWeight 0.05 (그대로)
- **resourcePenalty**: floor((시간부족+에너지부족) × 0.5) (그대로)

**분포 시뮬레이션** (단일 시나리오 점수, 자원 잔여 보너스 0 가정):
| 경로 | 계산 | 점수 | 등급 |
|------|------|------|------|
| 정점 (정점·정점·R3·bonus 10) | 25 + 35 + 30 + 10 | 100 | S |
| 우수 (정점·정점·R3·bonus 5) | 25 + 35 + 30 + 5 | 95 | S |
| 우수 (정점·정점·R3·bonus 0) | 25 + 35 + 30 | 90 | A |
| 잘함 (정점·정점·R2·bonus 5) | 25 + 35 + 18 + 5 | 83 | B |
| 적절 (정점·적절·R3·bonus 5) | 25 + 22 + 30 + 5 | 82 | B |
| C 진입 (정점·정점·R2·bonus 0) | 25 + 35 + 18 | 78 | C |
| C 진입 (정점·중립·R3·bonus 5) | 25 + 15 + 30 + 5 | 75 | C |
| C 진입 (정점·정점·R1·bonus 0) | 25 + 35 + 10 | 70 | C |
| 무난 (적절·정점·R2·bonus 0) | 18 + 35 + 18 | 71 | C |
| D 경계 (정점·중립·R2·bonus 5) | 25 + 15 + 18 + 5 | 63 | D |
| 평이 (적절·중립·R2·bonus 0) | 18 + 15 + 18 | 51 | D |
| 회피 (평이·회피·R3·bonus 0) | 10 + 0 + 30 | 40 | D |
| 부정 (정점·부정·R1) | 25 + 0 + 10 | 35 | D |

→ 학습적 이상(자기 손 + AI 거들기 + 자기 검수 + 정점 검토)에만 S/A 도착. 대충 위임·표절·회피는 R3까지 가도 D 영역.

**135 leaf 실제 분포** (`v07_시나리오_펼침_135행.csv` sweep, 자원 보너스 0 가정):

| 등급 | 카드 미보유 | 카드 매칭 시 |
|------|-----------|-------------|
| S | 0 (0.0%) | 5 (3.7%) |
| A | 5 (3.7%) | 0 (0.0%) ← 정점·정점·R3 자리에서 카드 매칭 시 95점 → S 점프 |
| B | 5 (3.7%) | 8 (5.9%) |
| C | 25 (18.5%) | 27 (20.0%) |
| D | 100 (74.1%) | 95 (70.4%) |

MIN 20점 / MAX 95점. **카드 매칭이 정점·정점·R3 자리(시나리오당 1자리 = 5)에서만 박혀 있어 카드 보유 시 A → S 점프**. 같은 카드를 두 번째 시나리오에서 매칭하면 S 도달 — 학습 의도(누적 학습 보상) 정합. 단, A가 0%인 분포는 학생 입장에서 A 등급 자체가 안 보일 수 있음 (csv 콘텐츠 리뷰 자리).

D 안 점수 폭(20~69, 50점 폭)이 넓어 회피·부정 자리들이 변별 가능. 회피/부정 + R1 = 20~30, 회피/부정 + R3 = 40~55, 적절·중립 + R2 = 50~65.

**학기 종합 리포트**(`showFinalReport`, line 2988)는 등급 매핑 안 사용. 4유형(주도형/분별형/의지형/출발형/탐색형) + 총점 + 카드 누적만. 등급은 시나리오 단위(Cut6 결과 패널)만.

---

#### 7. 역량 카드 시스템 (5/3 신설, boostCard 라벨 22종 폐기)

##### 7.1 컨셉

기존 review 결과 `boostCard`(시나리오 특화 메시지 22종 — "처음의 나 카드", "타인의 말 경고 카드")는 **폐기.** 같은 자리(시나리오 끝 도메인 지식 양수)에 **역량 카드**를 획득하는 시스템으로 대체. 역량 카드는 학생이 이해 가능한 일반 역량 라벨(문해력·협업능력·발표력 등)을 사용하고, 같은 라벨이 여러 시나리오에서 반복 획득 가능 → 학습 메시지 강조 효과.

> "도메인 지식"은 학생에게 어려운 용어. 역량 카드는 시나리오 안에서 구체 역량 라벨로 표현된다. "도메인 지식(문해력)" 식의 표기는 게이지 라벨에서만 사용, 카드는 후자만.

##### 7.2 도메인 풀 — 공통 + 시나리오 특화 (5/3 세션282 확정)

각 시나리오마다 가능한 역량 카드 후보 풀. **공통 풀(4종, 모든 시나리오 공유) + 시나리오 특화(3종)** = 시나리오당 7종.

###### 공통 풀 (5 시나리오 누적 가능)

| 카드 | 의미 | 주로 등장하는 자리 |
|---|---|---|
| **자기검증** | 자기 결과물 다시 보는 능력 | R3 (전면 검수) |
| **자기성찰** | 자기 행동·결정 돌아보는 능력 | C 묶음·얕음 자리 R3 |
| **검수능력** | 결함 발견하는 능력 | R2 (한 번 읽기)·B 묶음 R2~R3 |
| **비판적 사고** | 정보·결과 의심하고 따져보는 능력 | 정점 R2·부정 회복 R2 |

###### 시나리오 특화 풀

| 시나리오 | 특화 3종 |
|---|---|
| selfintro | 자기지식 / 표현력 / 정리력 |
| groupwork | 협업능력 / 소통능력 / 발표력 |
| eorinwangja | 문해력 / 공감력 / 해석능력 |
| career | 진로탐색 / 정보분석 / 직업이해 |
| studyplan | 학습설계 / 시간관리 / 학습전략 |

###### 변경 이력 (1차 가설 → 5/3 확정)

- eorinwangja "비판적 읽기" → 공통 "비판적 사고"로 흡수
- career "자기이해" → 공통 "자기성찰"로 흡수
- studyplan "메타인지" → 공통 "자기검증"으로 흡수

###### 카드 자리 룰

| 자리 | R1 | R2 | R3 |
|---|---|---|---|
| **회피** (B1·C3 + AI 통째 위임) | 0장 | 0장 | 0장 |
| **부정** (예: C2) | 0장 | 1장 (비판적 사고) | 3~4장 (회복) |
| **얕음** (예: A3) | 1장 | 2장 | 3~4장 (자기성찰) |
| **중립** (예: B2) | 1장 | 2~3장 (검수) | 3~4장 (자기검증) |
| **적절** (+/+) | 2장 | 3장 (+검수) | 4장 (+자기검증) |
| **정점** (++/++) | 3장 | 4장 (+비판적 사고) | 5장 (+자기검증·자기성찰) |

**핵심 룰** (5/3 피터공 진단):
- 회피 자리만 0장 — 학습 거의 없음
- **노력 자리는 R1부터 1장 이상 보장** — 자기 손으로 했으면 카드 받아야
- R3는 풍부 — 전면 검수 = 자기검증·자기성찰 자리
- 정점 R1부터 풍부 — 자기 주도 + 검수 = 카드 폭발

학기 통틀어 카드 풀: **공통 4종 + 특화 15종 = 19종**. 같은 카드(특히 공통) 여러 장 누적 가능 → 도메인 단단함 표시(A 관점 — 학기 끝 4유형 라벨 영향).

##### 7.3 yaml 스키마 확장

```yaml
selfintro:
  ...
  domainPool: [자기지식, 표현력, 정리력]   # 신설 — 시나리오 풀
  reviews:
    A1R3:
      competencyCards: [자기지식, 정리력]   # 신설 — 획득 카드 배열 (도메인 풀 안)
      note: "..."                          # 보존 — 카드 획득 시 학습 메시지
      # boostCard / bonusPoint — 폐기
```

##### 7.4 획득 조건 + 카드 데이터 구조

- **조건**: 시나리오 끝 시점 도 축 점수가 양수(>0)이면 그 leaf의 `competencyCards` 배열 카드 모두 획득
- **음수면 미획득** — 카드는 자리에 안 들어옴
- **데이터**: 인벤토리는 `gameState.inventory.competencyCards = [{label, scenario, scenarioTitle, leaf, note, ts}, ...]`. 같은 라벨 여러 장 누적 가능 (중복 카운트는 inventory 패널에서 표시).

##### 7.5 인벤토리 UI (슬라이드 패널)

- **탭 버튼**: 화면 우측 끝 고정 (세로 라벨 "📇 카드" 또는 "역량 카드"). 클릭 시 패널 슬라이드 인/아웃
- **패널 폭**: 320px 가량, 우측에서 슬라이드. 닫기 버튼 + 배경 dim
- **카드 표시 (5/3 갱신)**: 카운트 + 라벨 가로 배치
  - 카운트: 큰 볼드 + 배경색 강조 + 좌측 배치 (font-size 23px·font-weight 800·color #111·배경 #f0f0f0·padding 2px 10px·min-width 36px·radius 4px)
  - 라벨: 카운트 우측 (15px·700·카드 색상 — `_cardColor(label)` 활용)
  - 정렬: 카운트 내림차순 → 라벨 가나다순 (`.sort((a,b) => groups[b].length - groups[a].length || a.localeCompare(b, 'ko'))`)
  - "×N" 표기 폐기 — 카운트는 단독 숫자로
  - 클릭 시 시나리오·leaf 출처 expand
- **빈 상태**: "아직 획득한 카드가 없어요. 시나리오 끝에 카드를 받을 수 있습니다."

##### 7.6 reward 팝업 — 단건 컨펌 (5/3 세션278 재작성, cascade·skip 폐기)

- **트리거**: 시나리오 끝 chain의 [1] 단계. 도 축 양수 + `competencyCards` 배열 비지 않음
- **연출 (단건)**:
  1. 카드 1장 화면 중앙 fadein (0.5s) — 라벨 + note + **"획득" 버튼**
  2. 학생이 "획득" 클릭 → 우측 탭 버튼 위치로 travel (0.6s) + scale 축소 → 사라짐
  3. 다음 카드 자동 fadein (간격 0.2s buffer)
  4. 마지막 카드 travel 끝나면 chain 다음 단계로 자동 진행
- **인벤토리 badge**: travel 끝나는 시점부터 탭 버튼 unread badge 노출
- **`note` 텍스트**: 카드 본문에 표시 ("자기 경험을 직접 고르고 끝까지 확인해서 이후 자기표현 카드와 잘 맞음")
- **폐기**: cascade 자동 진입(2s 간격), 스킵 버튼, ESC 단축키, 배경 클릭 닫기 — 모두 제거
- **이유**: 학생이 카드가 무엇인지 + 획득했다는 사실을 강조. 모방·회피로 흐를 수 있는 자동 연출 폐기. 컨펌 = "이 카드를 내 것으로 받았다"는 능동적 자리

**카드 못 받은 회기**: cut6 결과 패널에 음수 안내 박스(`"이번엔 역량 카드를 받지 못했어요"`) — 도 축 음수 || competencyCards 0장일 때 출력. 카드 reward 단계는 건너뜀.

##### 7.7 위 축(위임 판단력) 표현 — 별도 결정 큐 (5/3 세션282 갱신)

위 축은 카드로 만들지 않음. 점수 + 게이지로만 표시 (현재 구조 유지). 측정 가능·객관 기준으로 학생에게 전달하는 방법은 후속 결정 자리:
- 옵션 A: 위 축도 카드로 (e.g. "위임 결정 ★", "AI 사용 검토 ★") — **미해결**
- 옵션 B: 시나리오 끝 위 축 결과 메시지 + 누적 그래프 (학기 끝 라벨에서 단계적 노출) — **미해결**
- 옵션 C: 학기 끝 4유형 라벨에만 (지금 그대로) — **5/3 종합 리포트에 카드 누적 박혀서 옵션 C 일부 선택된 상태** (학기 끝 4유형 + 위/도 카드 누적 그리드)

5/3 결정 시점은 1차 빌드 + 플테 후 → 별도 사이클. 옵션 A·B는 여전히 미해결.

##### 7.8 카드 매칭 활성화 메카닉 (v0.7 신설)

§1 결정 묶음의 척추 자리. 두 풀 통합(시나리오 아이템 + 19종 역량 카드 → 한 풀, 옵션 가) + 카드 매칭으로 점수 보너스가 붙는 메카닉. 학생 톤 메타 룰(§0.2)이 모든 학생 화면 텍스트에 적용된다.

###### 7.8.1 두 풀 통합 — 옵션 가 (메타 동봉)

v0.6의 두 풀(시나리오 아이템 + 19종 역량 카드)을 19종 역량 카드 한 풀로 통합. 시나리오 고유 라벨("처음의 나 카드", "타인의 말 경고 카드" 등 22종 boostCard)은 폐기되고, 그 학습 메시지는 leaf×review 27 자리 학생 톤 narrative 메타로 흡수된다.

```yaml
selfintro:
  ...
  reviews:
    A1R3:
      competencyCards: [자기지식, 정리력]   # 19종 풀 안의 카드
      narrative: |                          # v0.7 신설 — 메타 동봉 학생 톤
        내 추억과 관심사를 떠올려 내 말로 자기소개를 썼다.
        처음부터 다시 읽어 빠진 자리를 찾아 한 줄을 더 넣었다.
      # boostCard / bonusPoint / item 라벨 — 폐기
```

learning narrative 작성 룰: 학생 톤 메타 룰(§0.2) 적용. 시스템 ID·코드 라벨 X. 선택 행동·맥락·의미 중심 서술형. 한 호흡 두 줄 가량.

###### 7.8.2 카드 매칭 활성화 룰

학생이 학기 동안 누적한 카드(`gameState.inventory.competencyCards`)와 진입할 leaf의 매칭 룰(`axisDelta` 재정의 데이터, §1.4)을 lookup. 매칭 시 두 자리에 효과가 들어간다.

1. **결과 시 점수 보너스** — `getCardMatchBonus(leaf, ownedCards)`가 합산 식 bonus 항으로 들어감 (§6.6.6)
2. **결과 패널 한 줄** — Cut6 결과 패널 단계별 점수 자리에 "자기지식 카드 매칭 보너스 +5" 한 줄로 표시 (§6.6.4)

매칭/연관 룰 두 결:
- **직접 매칭 (v0.7 1차)**: `requireCard` 라벨이 학생 보유 카드 라벨과 정확히 일치
- **연관 매칭 (v0.7.x)**: 역량 그룹 yaml 정의 후. "자기지식" 보유 → "자기검증" 받는 leaf 활성화 같은 느슨한 매칭

###### 7.8.3 박스 정보 룰 — 선택 화면 vs 결과 패널

학생 화면의 두 자리는 다른 룰을 따른다.

| 자리 | 룰 | 표시 가능 |
|---|---|---|
| **선택 화면 (Cut2/Cut3)** | 직관·구체만, 예상 점수 X | 공식형 박스 비용·할인·최종 (§3.4) |
| **결과 패널 (Cut6)** | 사후 노출, 점수·매칭 보너스 직접 표시 | 단계별 점수 + narrative + 카드 매칭 한 줄 |

카드 매칭 활성화 신호는 결과 패널 자리에 들어간다. 선택 화면 박스에는 카드 매칭 X (학생이 선택 시 매칭 정보를 보면 정답 풀이가 되어 학습 메시지 흐려짐). 사후에 "내가 키운 역량이 다음 선택을 가능하게 했다"는 누적 메시지로 도착시킨다.

###### 7.8.4 잃는 자리 — boostCard 22종 라벨

폐기되는 자리: 시나리오 고유 boostCard 22종 라벨("처음의 나 카드", "타인의 말 경고 카드" 등). 이 라벨들이 운반하던 학습 메시지는 leaf×review 27 자리 학생 톤 narrative로 옮겨가서 살아남는다. 카드 자체는 19종 역량 카드 풀(공통 4종 + 시나리오 특화 15종)로 일원화.

---

#### 11. 타이틀+튜토리얼 화면 (5/3 세션278 신설)

##### 11.1 컨셉

게임 진입 시 곧바로 시나리오 선택 화면(`showStartScreen`)으로 가는 흐름을 폐기. 그 위에 **타이틀+튜토리얼 한 화면**(`showTitleScreen`)을 신설한다. 학생이 메카닉 무게(두 축·자원·카드·레벨업·4유형)에 들어가기 전에 한 번 펼쳐 보고 진입하는 자리.

> 한 화면 안에 타이틀 + 한 줄 명제 + 핵심 메카닉 2~3불릿 + "시작" 버튼 — 스크롤 없이.

##### 11.2 진입 흐름

```
페이지 로드
  ↓
gameState.tutorialSeen ?
  ├─ true  → showStartScreen()         (시나리오 선택)
  └─ false → showTitleScreen()         (타이틀+튜토리얼)
                ↓ "시작" 버튼 클릭
                gameState.tutorialSeen = true; saveGame()
                ↓
                showStartScreen()
```

- **첫 진입에만**: tutorialSeen 플래그가 false일 때만 자동 노출
- **다시 보기**: showStartScreen 화면에 "튜토리얼 다시 보기" 링크 → 클릭 시 showTitleScreen 호출 (플래그 변경 X)

##### 11.3 gameState 확장

```js
// createInitialState() 안
tutorialSeen:false   // 첫 시작 버튼 클릭 시 true
```

continueGame guard: 구버전 save 호환 — `if(gameState.tutorialSeen===undefined)gameState.tutorialSeen=true;` (이미 진행 중인 학기는 다시 안 보여줌).

##### 11.4 화면 구성 (한 장 레이아웃)

- **타이틀 박스** (상단): 게임명 + 부제
- **명제** (중앙 상): 한 문장. "이 게임이 무엇을 하는가"가 잡힐 것
- **메카닉 불릿** (중앙 하): 2~3개. 진행 흐름·두 축·자원의 한정성 정도까지. 카드/레벨업/4유형은 첫 회기에서 자연스럽게 익힘 (just-in-time)
- **시작 버튼** (하단): 한 안 — "1학기를 시작한다" 또는 "시작"

디자인: 게임 본체와 일관 (B&W 미니멀, 흰배경, 박스 외곽 2px black). 시나리오 선택 화면(`semester-frame`)의 톤을 따른다.

##### 11.5 카피 — v0.7 정정 (5/4 세션287)

v0.6 카피는 캐논 도입("딸깍하면…")과 진행자 톤("당신은 구별할 수 있을까?")을 한 화면에 결합했다. 두 메시지의 결이 다르다 — 캐논 도입은 "AI 시대 자기 자리"라는 큰 화두를, 진행자 톤은 "해보자" 게임 초대를 보낸다. 학생이 두 메시지를 한 화면에서 동시에 처리하기 무거운 자리. v0.7 타이틀은 직접 명제 한 줄로 정정하고 캐논 도입은 별도 자리로 옮긴다.

###### 정정안

```
[제목]
위임의 경계 — AI 시대, 무엇을 맡기고 무엇을 직접 할 것인가

[한 줄 도입]
한 학기 동안, 5가지 자리에서 너의 선택이 너를 만든다.

[버튼]
[게임 시작]   [튜토리얼 다시 보기]
```

- 제목 = 피터공 캐논 한 줄(직접 명제, 슬로건·메타포 X)
- 도입 = 시간(학기) + 자리(5 시나리오) + 핵심 명제(선택이 자기 만든다) 한 호흡
- 진행자 톤 폐기, 학생 톤 직접 발화로 대체

###### 튜토리얼 4문장 (학생 톤)

```
1. 시나리오마다 선택지를 골라요. 각 선택은 시간과 에너지를 써요.
2. 어떤 선택을 하느냐에 따라 결과물의 점수가 달라지고, 위임판단력과 도메인지식이 자라요.
3. 결과물 점수에 따라 등급이 매겨지고, 다음 시나리오의 시간·에너지가 충전돼요.
4. 쌓인 위임판단력·도메인지식은 다음 선택의 시간·에너지 비용을 깎아줘요. (할인 효과)
```

각 문장의 자리 의미:
- 1번 — 시나리오 단위 반복 구조 명시 + 자원 비용 메카닉 도착
- 2번 — 선택이 점수·역량을 동시에 변화시킨다(코드 동작과 정합). v0.6 "그에 따라" 모호함 정리
- 3번 — 등급 한 호흡 + 자원 충전 흐름(§3 결정 반영)
- 4번 — 5/4 굿모닝 결정적 발견 + §3.4 공식형 박스 자연 연결. "할인 효과" 한 단어로 ④ 메카닉이 학생 화면에 도착

###### 별도 자리로 이동되는 카피

- **캐논 도입** ("딸깍하면 누구나 할 수 있는 AI 시대라고 한다. 누구나 할 수 있다면, 누구인가가 중요하다.") — README 또는 게임 ending 자리로. 학생이 게임 안에서 만나는 자리는 ending이 자연스럽지만 README가 가벼운 길. v0.7.x 결정 자리.
- **진행자 톤** ("당신은 구별할 수 있을까?", "AI 리터러시, 위임의 경계! 상황에 따른 당신의 선택이...", "높은 점수, 역량 레벨업!") — 폐기. 학생 톤 메타 룰(§0.2)과 결이 충돌하는 자리.
- **1·2·3 게임 진행 단락** — 튜토리얼 4문장으로 응축되어 흡수.

##### 11.6 코드 자리

- 신규 함수: `showTitleScreen()` — DOM 생성 + 시작 버튼 핸들러 (tutorialSeen=true → saveGame → showStartScreen)
- 진입점 변경: line 2561 `showStartScreen();` → 분기 호출
- showStartScreen 갱신: `vtag` 자리 또는 별도 위치에 "튜토리얼 다시 보기" 링크 추가

---

#### 12. pending 시스템 + 원 마커 (5/3 세션278 신설, §3.3 짝)

##### 12.1 컨셉

한 시나리오 안의 점수 변화를 "확정 누적"이 아닌 "임시 pending"으로 표시. 학생은 매 선택마다 원 마커로 즉각 피드백 받지만, 비용 효과 계산은 이전 시나리오 끝의 누적값으로 고정. 시나리오 끝에서 pending → 누적 흡수.

**해결하는 문제**:
- 한 시나리오 안 비용 효과가 매 선택마다 변하는 회로(×4 폭주의 root cause) 폐기
- 그러면서도 학생의 선택 피드백은 원 마커로 살림 — 두 시간 축 분리

##### 12.2 gameState 확장

```js
// createInitialState() 안
pending:{delegation:0, knowledge:0}   // 시나리오 시작 0, 끝에서 value에 흡수
```

continueGame guard: `if(!gameState.pending)gameState.pending={delegation:0,knowledge:0};`

##### 12.3 적용 시점 변경

| 함수 | 정정 전 | 정정 후 |
|---|---|---|
| `applyTier1` | `competencies.delegationChoice.value+=delta` | `pending.delegation+=delta` |
| `applyTier2` | 동일 | `pending.delegation+=delta` |
| `applyReview` | `competencies.knowledge.value+=delta` | `pending.knowledge+=delta` |
| `_applyDiscount` | `competencies.*.value` 기준 | 그대로 (`competencies.*.value`만 사용, pending 배제) |

##### 12.4 원 마커 UI (5/3 후속 — 좌우 분할)

- **위치**: 두 트랙(위·도) 게이지 위. pending-dots 컨테이너를 좌우 50/50 분할 (`.pending-dots-neg` + `.pending-dots-pos`). 중앙선이 게이지의 `bipolar-zero`(`left:50%`)와 시각적으로 정렬
- **양수 pending**: 중앙에서 **우측**으로 초록 원 N개 (좌측에서 우측으로 뻗음)
- **음수 pending**: 중앙에서 **좌측**으로 빨강 원 N개 (우측에서 좌측으로 뻗음, `flex-direction:row-reverse`)
- **0**: 양쪽 모두 빈 상태
- **양수 → 음수 전환**: 초록이 깨지는 연출 (0.3s) + 빨강 등장
- **음수 → 양수 전환**: 빨강이 사라지고 초록 등장
- **CSS**: `.pending-dots` 컨테이너 + 좌우 분할 자식(`.pending-dots-neg`, `.pending-dots-pos`), `.pending-dot.positive`/`.negative`, `.pending-dot.breaking` keyframe
- **이유**: 게이지 자체가 좌(음)/우(양) 방향성. 원 마커도 같은 방향성 채택 → 색 + 방향 두 채널로 직관 강화. 한 시나리오 안 pending max ±3이라 좌/우 50% 공간 충분
- **유의**: SPEC 라벨 -4/+8은 점수 max 값(단위당 폭 비대칭)이지 시각 자리 아님. 게이지 zero선 = 시각 50%

##### 12.5 시나리오 끝 흡수

cut6 chain의 첫 단계로 박음 — 카드 reward 직전:

```
[0] 결과 패널 (cut6) — 1.4초
        ↓
[1] pending 흡수 — pending dot이 게이지로 흘러들어가는 애니메이션 (0.8s)
        - value+=pending → 게이지 갱신
        - pending=0 → dot 클리어
        ↓
[2] 카드 reward (도 양수+카드 있을 때)
[3] 레벨업
[4] 자원 충전
```

`absorbPending()` 함수: `competencies.*.value += pending.*` → `pending.* = 0` → setBipolar 갱신 + 마커 클리어 + 흡수 애니메이션 재생. Promise 반환.

##### 12.6 시나리오 시작 reset

`startScenario(scid)`에서 `gameState.pending = {delegation:0, knowledge:0}` reset. 마커 클리어.

---

#### 8. 미정 / 다음 결정

- 4유형 임계값 N (Phase 4 발란스 후, 가안 N=0)
- ~~카드 메시지 메카닉 4안~~ → §7 역량 카드 시스템으로 결정 ✅
- `axisDelta` 트리거 조건 — leafIds 조합 / 누적 점수 임계 / 둘 다 (Phase 5)
- multiplier 0.6 폐지 + raw 재조정 ✅ (5/3 80ff4b5)
- ~~score-display 진행 중 숨김 정책~~ → 폐기 (5/3 e75d4b8)
- ~~yaml tier1에 `delegation`·`knowledge` 필드 추가~~ → selfintro ✅ (5/3 80ff4b5), 나머지 4 시나리오 외부 LLM 분석 후
- 변수명 마이그 (`competencies.delegationChoice` / `knowledge` → `state.score.위` / `도`) — 동작 변화 없음, 우선순위 낮음
- 5 시나리오 → 3 레벨×3 시나리오 = 9 시나리오 확장 ([[요청.26.0503.0955-AI리터러시3x3구조]])
- 위 축(위임 판단력) 측정 가능·객관 기준 전달 방법 (§7.7, 1차 빌드 후 결정)
- 도메인 풀 5 시나리오 라벨 후보 정정 (§7.2 1차 가설 → 백도/피터공 검토)

---

#### §14. 텍스트 데이터 관리 (5/12 세션338)

##### 14.1 구조

시나리오 콘텐츠(scenarios.yaml) 이외의 **모든 화면 텍스트**를 `data/texts.yaml`로 분리. 코드에는 fallback만 남긴다.

| 섹션 | 항목 수 | 내용 |
|------|---------|------|
| cards | 19×4 | 역량 카드 color/short/full_definition/description |
| narrative | ~20 | 학기 종합 리포트 (4유형/tier1/카드분포/빈카드) |
| ui_messages | ~25 | game_over/inventory/card_reward/scenario_result/scene_mood/reset_confirm |
| report | ~10 | 리포트 화면 타이틀/통계 라벨/카드 섹션/semester_final |
| title_screen | ~10 | 타이틀 화면 heading/intro/host/tutorial 4문장/버튼 |
| start_screen | ~12 | 시나리오 선택 화면 heading/subtitle/진행 라벨/마크/버튼 |
| panel_labels | 6 | 좌우 패널 상시 라벨 (자원/시간/에너지/역량/위임 판단력/도메인 지식) |
| levelup_modal | 5 | 레벨업 팝업 badge/라벨/포맷/버튼 |
| rp_modal | 5 | 자원토큰 분배 팝업 제목/안내/라벨 |
| result_texts | 10 | 위/도 4유형 결과 텍스트 + 등급별 시상 무드 |

총 188개 텍스트 항목. 10개 섹션.

##### 14.2 빌드 흐름

```
texts.yaml ──→ build.py ──→ index.html (TEXTS 객체로 inject)
    ↑                            ↓
csv_to_yaml.py            코드가 TEXTS.section.key로 참조 (fallback 유지)
    ↑
ui_texts.csv ← yaml_to_csv.py ← texts.yaml
```

- **Source of truth**: `data/texts.yaml`
- **사람 편집**: `data/ui_texts.csv` (Google Sheets 임포트/편집/다운로드)
- **빌드**: `python3 build.py` — yaml 전부 파싱 → JSON → HTML inject

##### 14.3 CSV 변환 스크립트

```bash
python3 yaml_to_csv.py              # texts.yaml → data/ui_texts.csv
python3 yaml_to_csv.py -o ~/Downloads/  # 지정 경로로 출력
python3 csv_to_yaml.py              # data/ui_texts.csv → data/texts.yaml
python3 csv_to_yaml.py -i ~/Downloads/ui_texts.csv  # 지정 CSV 입력
```

CSV 구조: `path,value` (2컬럼). path는 점(.) 구분 YAML 경로.

##### 14.4 코드 참조 패턴

정적 HTML → `_applyStaticTexts()`에서 ID로 덮어쓰기:
```javascript
var PL = TEXTS.panel_labels || {};
_set('panel-title-resource', PL.resource_title);
```

동적 HTML → 생성 시점에 fallback 참조:
```javascript
var T = (typeof TEXTS!=='undefined' && TEXTS && TEXTS.title_screen) || {};
h += '<h1>' + (T.heading || '위임의 경계 — ...') + '</h1>';
```

---

#### 9. 참조

- [[PLAN|PLAN.md]] — 단계별 구현 순서
- [[TASKS|TASKS.md]] — 진행 체크리스트
- [[26.0501 v0.6 기획 결정 요약]] — 이 빌드의 출발점
- `_dev/ai-literacy-delegation-boundary/v05/SPEC.md` — v0.5 기준선

---

#### §13. 역량 카드 체계 v11 재설계 (5/7 세션304)

##### 13.1 두 트랙 구조

기존 19종 단일 풀 → **인간중심 역량 카드 + 도메인/성장 역량 카드** 두 트랙.

- 인간중심 역량 카드: 김현철 교수팀(고려대) 12가지 인간중심 사고 역량 체계 기반. 학생에게 노출되는 카드 이름은 **3축**(중심잡기·융합하기·성찰하기). 세부 역량은 **태그**로 붙음. 예: `[중심잡기] +주체성`
- 도메인/성장 역량 카드: 시나리오 안에서 학생이 실제로 한 행동을 보여주는 카드 **10종** + 성장 카드 **2종** = 12종.
- 학생은 한 번의 결과에서 두 종류를 함께 받을 수 있음.

##### 13.2 인간중심 역량 카드 — 3축 + 12태그

**축 1 — 중심잡기**: AI 시대에 자기 기준과 목표를 붙잡는 힘
| 태그 | 의미 |
|---|---|
| 주체성 | 명확한 목표와 기준을 가지고 AI 활용을 주도하며 결과에 책임지는 힘 |
| 적응성 | 새로운 AI 기술과 환경 변화를 유연하게 받아들이고 활용하는 힘 |
| 호기심 | AI 답에 멈추지 않고 더 묻고 탐색하는 태도 |

**축 2 — 융합하기**: AI와 내 생각을 엮어 문제를 풀거나 새 결과를 만드는 힘
| 태그 | 의미 |
|---|---|
| 창의적 사고 | 내 생각과 AI 도움을 엮어 새로운 결과를 만드는 힘 |
| 문제해결적 사고 | 문제의 핵심을 파악하고 AI를 어디에 쓸지 정하는 힘 |
| 직관적 통찰 | 경험과 지식으로 AI 정보의 핵심을 알아보는 힘 |
| 통합적 사고 | 여러 정보와 관점을 연결해 균형 있게 정리하는 힘 |
| 맥락적 사고 | AI 결과를 상황·목적·사람에 맞게 해석하는 힘 |

**축 3 — 성찰하기**: AI 결과와 나의 선택을 다시 확인하고 책임 있게 고치는 힘
| 태그 | 의미 |
|---|---|
| 비판적 사고 | AI 결과의 오류·빈틈·편향을 의심하고 따져보는 힘 |
| 윤리적 사고 | 내가 하지 않은 일을 한 것처럼 쓰지 않고 책임 있게 AI를 쓰는 힘 |
| 성찰적 사고 | AI를 쓴 과정과 내 선택을 되돌아보고 더 낫게 바꾸는 힘 |
| 사회·관계적 사고 | AI가 낀 상황에서도 타인과 협력하고 존중하며 소통하는 힘 |

인벤토리 누적은 3종(중심잡기 N장 / 융합하기 N장 / 성찰하기 N장). 펼치면 세부 태그별 카운트.

##### 13.3 도메인/성장 역량 카드 — 12종

**도메인 카드 10종**:
| 카드 | 의미 | 주 등장 시나리오 |
|---|---|---|
| 자기이해 | 내 경험·관심·약점·기준을 알아차리는 힘 | 자기소개, 진로, 시험공부 |
| 표현력 | 내 생각을 글이나 말로 풀어내는 힘 | 자기소개, 독후감, 모둠발표 |
| 문해력 | 글과 자료를 직접 읽고 의미를 길어올리는 힘 | 어린왕자 독후감 |
| 분석력 | 정보나 문제를 비교하고 따져보는 힘 | 진로, 시험공부, 발표 자료 |
| 검토력 | 결과를 다시 확인하고 고치는 힘 | 전 시나리오 공통 |
| 자료판단력 | 출처·근거·신뢰도를 보고 자료를 고르는 힘 | 모둠발표, 독후감, 진로, 시험공부 |
| 소통력 | 상대의 생각과 맥락을 읽고 맞추는 힘 | 모둠발표, 독후감, 자기소개 |
| 협업력 | 팀 안에서 역할과 흐름을 맞추는 힘 | 모둠발표 |
| 학습력 | 내가 모르는 것을 찾고 공부를 설계하는 힘 | 시험공부, 발표 준비 |
| 탐색력 | 관심과 가능성을 찾아 넓히는 힘 | 진로 |

**성장 카드 2종**:
| 카드 | 의미 | 지급 조건 |
|---|---|---|
| 회복력 | 낮은 결과에서 비어 있던 과정을 알아차리고 다시 세우는 힘 | D 결과 시 자동 지급 |
| 도전력 | 같은 시나리오를 다시 시도하며 더 나은 선택을 해보는 힘 | 리플레이 완료 시 지급 |

##### 13.4 카드 지급 원칙

| 결과 | 인간중심 카드 | 도메인 카드 | 성장 카드 |
|------|-------------|-----------|----------|
| C 이상 | 1장 | 1~2장 (특별 경로 시 +1) | — |
| D | — | — | 회복력 1장 |
| 리플레이 완료 | — | — | 도전력 1장 |

##### 13.5 기존 §1.4·§6.3·§6.4·§7 갱신 사항

- §1.4 axisDelta: `requireCard` 라벨이 새 카드 체계의 도메인 카드명으로 변경됨 (자기지식→자기이해, 기타 통합/신설 반영). 인간중심 카드와의 매칭 룰은 v0.8 자리
- §6.3 시나리오 끝 chain: [1] 카드 reward 단계에서 인간중심 + 도메인 두 종류 카드가 순차 표시. D 결과 시 회복력 카드 표시 + "다시 도전해 볼래?" 제안
- §6.4 학기 끝 화면: 카드 누적 리뷰가 인간중심 프로필(3축 분포) + 도메인 프로필 + 성장 카드 프로필 세 영역으로 분리
- 기존 19종 competencyCards yaml 키 → 두 트랙(humanCentricCard + domainCards) 키로 재구조화

##### 13.6 texts.yaml 마이그레이션

기존 `cards:` 섹션(19종)을 두 블록으로 분리:
```yaml
humanCentricCards:
  중심잡기:
    color: "..."
    tags:
      주체성: { short: "...", description: "..." }
      적응성: { ... }
      호기심: { ... }
  융합하기: { ... }
  성찰하기: { ... }

domainCards:
  자기이해: { color: "...", short: "...", description: "..." }
  표현력: { ... }
  # ... 10종

growthCards:
  회복력: { color: "...", short: "...", description: "..." }
  도전력: { ... }
```

기존 `cards:` 블록은 deprecated 표시 후 보존 (마이그레이션 기간).

##### 13.7 CSV 컬럼 변경

기존 `획득 역량카드` 단일 컬럼 → 분리:
```
카드획득여부 | 인간중심 축 | 획득 인간중심역량 | 획득 도메인카드 | 획득 성장카드 | 리플레이 카드상태
```

##### 13.8 시나리오별 카드 매핑 방향

**자기소개**: 인간중심 후보(중심잡기+주체성, 성찰하기+성찰적 사고, 성찰하기+비판적 사고) / 도메인 후보(자기이해, 표현력, 검토력)
**모둠발표**: 인간중심 후보(성찰하기+사회관계적 사고, 융합하기+통합적 사고, 성찰하기+비판적 사고) / 도메인 후보(협업력, 소통력, 자료판단력, 분석력, 검토력)
**어린왕자**: 인간중심 후보(중심잡기+주체성, 성찰하기+비판적 사고, 성찰하기+윤리적 사고) / 도메인 후보(문해력, 표현력, 검토력, 자료판단력)
**진로**: 인간중심 후보(중심잡기+주체성, 중심잡기+호기심, 융합하기+맥락적 사고, 성찰하기+성찰적 사고) / 도메인 후보(자기이해, 탐색력, 분석력, 자료판단력, 검토력)
**시험공부**: 인간중심 후보(중심잡기+주체성, 융합하기+문제해결적 사고, 성찰하기+비판적 사고) / 도메인 후보(학습력, 분석력, 검토력, 자료판단력, 자기이해)

##### 13.9 열린 검토 포인트

1. "융합하기" 이름이 초등 고학년에게 어려운지 검증 필요
2. 윤리적 사고는 책임 문제가 있는 경로(독후감·자기소개)에 제한적 사용
3. 직관적 통찰은 학생 수준에서 작동 여부 확인 후 태그 사용 결정
4. 기존 19종 카드 → 새 체계 매핑 테이블 작성 필요 (코드 마이그레이션용)
